--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -4,8 +4,8 @@
         <h4 class="plugin_summary">User Self-Registration</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_adduser</dt>
-            <dd class="plugin_version">Version 2.45 (GPL, Last Updated 2018-08-14)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Ian</dd>
+            <dd class="plugin_version">Version 2.45 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Allows blog visitors to create their own author account. Together with the Event-plugin (index.php?serendipity[subpage]=adduser) you can choose whether only registered users may post comments.</p>
@@ -24,8 +24,8 @@
         <h4 class="plugin_summary">Show tagged entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_freetag</dt>
-            <dd class="plugin_version">Version 3.12 (GPL, Last Updated 2018-12-23)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Jonathan Arkell, Grischa Brockhaus, Lars Strojny, Ian</dd>
+            <dd class="plugin_version">Version 3.12 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Jonathan Arkell, Grischa Brockhaus, Lars Strojny, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Shows a list of existing tags for entries</p>
@@ -60,8 +60,8 @@
         <h4 class="plugin_summary">Creative Commons</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_creativecommons</dt>
-            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2017-11-03)</dd>
-            <dd class="plugin_maintainers">Evan Nemerson, Ian</dd>
+            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Evan Nemerson, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Display a creative commons notification in the sidebar.</p>
@@ -204,8 +204,8 @@
         <h4 class="plugin_summary">Piwik</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_piwik</dt>
-            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2018-04-04)</dd>
-            <dd class="plugin_maintainers">Bernd Distler, Ian</dd>
+            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Bernd Distler, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">show statistics of Piwik in sidebar</p>
@@ -284,8 +284,8 @@
         <h4 class="plugin_summary">flickr Photostream</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_flickr</dt>
-            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2018-03-27)</dd>
-            <dd class="plugin_maintainers">Michael Kaiser, Ian</dd>
+            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Michael Kaiser, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Display the latest photos from flickr Photostreams.</p>
@@ -336,8 +336,8 @@
         <h4 class="plugin_summary">My Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_mycalendar</dt>
-            <dd class="plugin_version">Version 0.14 (GPL, Last Updated 2016-10-11)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Markus Gerstel, Ian</dd>
+            <dd class="plugin_version">Version 0.14 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Markus Gerstel, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Shows your personal calendar with X upcoming scheduled events</p>
@@ -368,8 +368,8 @@
         <h4 class="plugin_summary">Shoutbox</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_shoutbox</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2018-04-03)</dd>
-            <dd class="plugin_maintainers">Matthias Lange, Ian</dd>
+            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Matthias Lange, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Displays a shoutbox for unrelated comments</p>
@@ -416,8 +416,8 @@
         <h4 class="plugin_summary">Upcoming Events</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_microformats</dt>
-            <dd class="plugin_version">Version 0.25 (GPL, Last Updated 2017-02-02)</dd>
-            <dd class="plugin_maintainers">Matthias Gutjahr, Ian</dd>
+            <dd class="plugin_version">Version 0.25 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Matthias Gutjahr, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Display upcoming and recommended events in the sidebar and apply the hCalendar microformat to them.</p>
@@ -532,8 +532,8 @@
         <h4 class="plugin_summary">Guestbook Sidebar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_guestbook</dt>
-            <dd class="plugin_version">Version 1.26 (GPL, Last Updated 2016-07-07)</dd>
-            <dd class="plugin_maintainers">Jaap Boerma ( j@webbict.com ), Tadashi Jokagi &lt;elf2000@users.sourceforge.net&gt;, Ian</dd>
+            <dd class="plugin_version">Version 1.26 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Jaap Boerma ( j@webbict.com ), Tadashi Jokagi &lt;elf2000@users.sourceforge.net&gt;, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Display the latest guestbook items in the sidebar</p>
@@ -615,8 +615,8 @@
         <h4 class="plugin_summary">Static Page List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_staticpage</dt>
-            <dd class="plugin_version">Version 1.31 (GPL, Last Updated 2019-01-09)</dd>
-            <dd class="plugin_maintainers">Rob Antonishen, Falk Doering, Ian</dd>
+            <dd class="plugin_version">Version 1.31 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Rob Antonishen, Falk Doering, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
         <p class="plugin_description">This plugin displays a configurable list of the static pages.</p>
@@ -699,8 +699,8 @@
         <h4 class="plugin_summary">Unified Sidebar Image Display</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_imagesidebar</dt>
-            <dd class="plugin_version">Version 1.14 (BSD, Last Updated 2019-03-25)</dd>
-            <dd class="plugin_maintainers">Andrew Brown (Menalto code), Matthew Groeninger (Unified/Media Lib. Code), Stefan Lange-Hegermann (Zooomr Code), Matthew Maude (Coppermine code), Ian</dd>
+            <dd class="plugin_version">Version 1.14 (BSD, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Andrew Brown (Menalto code), Matthew Groeninger (Unified/Media Lib. Code), Stefan Lange-Hegermann (Zooomr Code), Matthew Maude (Coppermine code), Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Offers the ability to display images in the sidebar. The source of the images is configurable. The plugin is able to connect to a (deprecated) Menalto Gallery installs &quot;random&quot; URL, access a Coppermine database directory (MySql only), connect to the web service Zooomr (http://beta.zooomr.com/home) (deprecated) or access images in the Serendipity Media Library. PLEASE NOTE: This plugin has been checked working with recent Serendipity installs for the Serendipity Media Library only. You will find limitations and old legacy code with at least the Menalto Gallery (dead project) and modern PHP using old MySQL extension code API calls.</p>
@@ -715,8 +715,8 @@
         <h4 class="plugin_summary">flickr Photostream</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_flickr</dt>
-            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2018-03-27)</dd>
-            <dd class="plugin_maintainers">Michael Kaiser, Ian</dd>
+            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Michael Kaiser, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Display the latest photos from flickr Photostreams.</p>
@@ -815,8 +815,8 @@
         <h4 class="plugin_summary">Statistics</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_statistics</dt>
-            <dd class="plugin_version">Version 1.7 (GPL, Last Updated 2017-11-06)</dd>
-            <dd class="plugin_maintainers">Arnan de Gans, Garvin Hicking, Ian</dd>
+            <dd class="plugin_version">Version 1.7 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Arnan de Gans, Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Statistics</p>
