--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -4,8 +4,8 @@
         <h4 class="plugin_summary">Dashboard Feed Reader</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_feed</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2018-08-20)</dd>
-            <dd class="plugin_maintainers">Ian</dd>
+            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
         <p class="plugin_description">The Dashboard S9y Feedle</p>
@@ -152,8 +152,8 @@
         <h4 class="plugin_summary">Spamblock Bee (Honeypot, Hidden Captcha)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_spamblock_bee</dt>
-            <dd class="plugin_version">Version 1.3.7 (GPL, Last Updated 2018-10-22)</dd>
-            <dd class="plugin_maintainers">Grischa Brockhaus, Janek Bevendorff</dd>
+            <dd class="plugin_version">Version 1.3.7 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Grischa Brockhaus, Janek Bevendorff, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Implements simple comment antispam mechanisms, that are easy to configure but very effective.</p>
@@ -172,8 +172,8 @@
         <h4 class="plugin_summary">Dashboard Feed Reader</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_feed</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2018-08-20)</dd>
-            <dd class="plugin_maintainers">Ian</dd>
+            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
         <p class="plugin_description">The Dashboard S9y Feedle</p>
@@ -628,8 +628,8 @@
         <h4 class="plugin_summary">Backup Interface</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_backup</dt>
-            <dd class="plugin_version">Version 0.17 (GPL, Last Updated 2018-04-08)</dd>
-            <dd class="plugin_maintainers">Alexander Mieland, Matthias Mees, Ian</dd>
+            <dd class="plugin_version">Version 0.17 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Alexander Mieland, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Provides the ability to automatically make backups from your s9y, the database-tables, the whole database and the files. Only MySQL(i) databases are currently supported. WARNING: This plugin does not work well with large databases or directories.</p>
@@ -708,8 +708,8 @@
         <h4 class="plugin_summary">Dashboard Feed Reader</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_feed</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2018-08-20)</dd>
-            <dd class="plugin_maintainers">Ian</dd>
+            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
         <p class="plugin_description">The Dashboard S9y Feedle</p>
@@ -740,8 +740,8 @@
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cal</dt>
-            <dd class="plugin_version">Version 1.85 (GPL, Last Updated 2019-04-10)</dd>
-            <dd class="plugin_maintainers">Ian</dd>
+            <dd class="plugin_version">Version 1.85 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Shows an event calendar inside your blogs with your normal blog design. It supports backend/frontend administration, multiple events and iCal export. (MySQL-only)</p>
@@ -772,8 +772,8 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.74 (GPL, Last Updated 2019-05-10)</dd>
-            <dd class="plugin_maintainers">Ian</dd>
+            <dd class="plugin_version">Version 3.74 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
         <p class="plugin_description">Shows a guestbook inside your blog with your normal blog design.</p>
@@ -1676,8 +1676,8 @@
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cal</dt>
-            <dd class="plugin_version">Version 1.85 (GPL, Last Updated 2019-04-10)</dd>
-            <dd class="plugin_maintainers">Ian</dd>
+            <dd class="plugin_version">Version 1.85 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Shows an event calendar inside your blogs with your normal blog design. It supports backend/frontend administration, multiple events and iCal export. (MySQL-only)</p>
@@ -1724,8 +1724,8 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.74 (GPL, Last Updated 2019-05-10)</dd>
-            <dd class="plugin_maintainers">Ian</dd>
+            <dd class="plugin_version">Version 3.74 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
         <p class="plugin_description">Shows a guestbook inside your blog with your normal blog design.</p>
@@ -1856,8 +1856,8 @@
         <h4 class="plugin_summary">Backup Interface</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_backup</dt>
-            <dd class="plugin_version">Version 0.17 (GPL, Last Updated 2018-04-08)</dd>
-            <dd class="plugin_maintainers">Alexander Mieland, Matthias Mees, Ian</dd>
+            <dd class="plugin_version">Version 0.17 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_maintainers">Alexander Mieland, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Provides the ability to automatically make backups from your s9y, the database-tables, the whole database and the files. Only MySQL(i) databases are currently supported. WARNING: This plugin does not work well with large databases or directories.</p>
