--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -252,9 +252,9 @@
         <h4 class="plugin_summary">Social Bookmarks Plugin</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_socialbookmarks</dt>
-            <dd class="plugin_version">Version 0.47 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 0.48 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Matthias Gutjahr</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.9alpha5</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">A plugin to display bookmarks from a social bookmark service (del.icio.us, ma.gnolia, furl.net, linkroll, Mister Wong) via an RSS feed.</p>
         <ul class="plugin_actions">
