--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -136,7 +136,7 @@
         <h4 class="plugin_summary">Spamblock (Bayes)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_spamblock_bayes</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.05 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">kleinerChemiker, Malte Paskuda, based upon b8 by Tobias Leupold, Mario Hommmel, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.2</dd>
         </dl>
@@ -208,7 +208,7 @@
         <h4 class="plugin_summary">Amazon Media Button</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_amazonchooser</dt>
-            <dd class="plugin_version">Version 0.81 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 0.82 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Matthew Groeninger, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -288,7 +288,7 @@
         <h4 class="plugin_summary">Coppermine Selector</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cpgselector</dt>
-            <dd class="plugin_version">Version 2.10 (GPL, Last Updated 2019-07-13)</dd>
+            <dd class="plugin_version">Version 2.11 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Matthew Maude (modified by Jim Davies)</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -628,7 +628,7 @@
         <h4 class="plugin_summary">Backup Interface</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_backup</dt>
-            <dd class="plugin_version">Version 0.18 (GPL, Last Updated 2019-08-16)</dd>
+            <dd class="plugin_version">Version 0.19 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Alexander Mieland, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -788,7 +788,7 @@
         <h4 class="plugin_summary">Link List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_linklist</dt>
-            <dd class="plugin_version">Version 2.06 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 2.07 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Matthew Groeninger, Omid Mottaghi Rad, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -804,7 +804,7 @@
         <h4 class="plugin_summary">Linktrimmer</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_linktrimmer</dt>
-            <dd class="plugin_version">Version 1.7.1 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.7.2 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1036,7 +1036,7 @@
         <h4 class="plugin_summary">Layout-Plugin: Printerfriendly version</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_layout_printerfriendly</dt>
-            <dd class="plugin_version">Version 1.1 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Sebastian Nohn</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 0.7</dd>
         </dl>
@@ -1152,9 +1152,9 @@
         <h4 class="plugin_summary">HTTP-Authentication</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_httpauth</dt>
-            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.7 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Authenticates users via HTTP auth using their s9y user login data.</p>
         <ul class="plugin_actions">
@@ -1480,7 +1480,7 @@
         <h4 class="plugin_summary">Embed Ads (TextLinkAds.com, Custom)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_textlinkads</dt>
-            <dd class="plugin_version">Version 0.14 (GPL, Last Updated 2018-04-06)</dd>
+            <dd class="plugin_version">Version 0.15 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1856,7 +1856,7 @@
         <h4 class="plugin_summary">Backup Interface</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_backup</dt>
-            <dd class="plugin_version">Version 0.18 (GPL, Last Updated 2019-08-16)</dd>
+            <dd class="plugin_version">Version 0.19 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Alexander Mieland, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2004,7 +2004,7 @@
         <h4 class="plugin_summary">Disqus comments</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_disqus</dt>
-            <dd class="plugin_version">Version 0.5 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2036,7 +2036,7 @@
         <h4 class="plugin_summary">Facebook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_facebook</dt>
-            <dd class="plugin_version">Version 1.01 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.02 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -2068,7 +2068,7 @@
         <h4 class="plugin_summary">Link List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_linklist</dt>
-            <dd class="plugin_version">Version 2.06 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 2.07 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Matthew Groeninger, Omid Mottaghi Rad, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2180,11 +2180,27 @@
         </ul>
     </div>
 
+    <div id="serendipity_event_tinypng" class="plugin">
+        <h4 class="plugin_summary">Compress Images</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_tinypng</dt>
+            <dd class="plugin_version">Version 1.03 (GPL, Last Updated 2019-08-18)</dd>
+            <dd class="plugin_maintainers">onli</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+        </dl>
+        <p class="plugin_description">Compress PNG and JPG images with the TinyPNG service.</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_tinypng.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_tinypng">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_tinypng" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_tinypng/ChangeLog">ChangeLog</a></li>
+        </ul>
+    </div>
+
     <div id="serendipity_event_cpgselector" class="plugin">
         <h4 class="plugin_summary">Coppermine Selector</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cpgselector</dt>
-            <dd class="plugin_version">Version 2.10 (GPL, Last Updated 2019-07-13)</dd>
+            <dd class="plugin_version">Version 2.11 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Matthew Maude (modified by Jim Davies)</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2232,7 +2248,7 @@
         <h4 class="plugin_summary">Import from Flickr</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_flickr</dt>
-            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2017-07-22)</dd>
+            <dd class="plugin_version">Version 0.7 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Jay Bertrand</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2540,9 +2556,9 @@
         <h4 class="plugin_summary">Markup: Syntax Highlighter</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dpsyntaxhighlighter</dt>
-            <dd class="plugin_version">Version 3.0.83 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 3.20 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Alex Gorbatchev (core), Brendon Kozlowski and J.M. Roth (plugin)</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.0</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">This plugin is a JavaScript code highlighter based on the code of the same name by Alex Gorbatchev.   This plugin takes less server-side resources than GeSHi and displays less markup in the actual HTML code.  It's a lighter, cleaner alternative. This plugin requires the supporting theme to provide the following hooks: frontend_header, frontend_footer (and optionally backend_preview on the administrative theme only).</p>
         <ul class="plugin_actions">
@@ -2816,7 +2832,7 @@
         <h4 class="plugin_summary">Show read/unread state of entries for visitors</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_markread</dt>
-            <dd class="plugin_version">Version 1.5 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2019-08-18)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
