--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -256,7 +256,7 @@
 <h4 id="docs-is-it-possible-to-have-two-or-more-blogs-beside-my-home-site">Is it possible to have two ore more blogs beside my home site?</h4>
 
 <div>
-    <p>Yes, this is possible too. You just have to make sure to <b>not</b> use <b>nested</b> blogs, inside each other. This will not work and is not supported!</p>
+    <p>Yes, this is possible too. You just have to make sure to <b>not</b> use <b>nested</b> blogs, inside each other. This will not work and is not supported, at least from Serendipity's point of view! If you configure your webserver to handle the nested directory as a complete new route, as DOCUMENT ROOT, that is another question! :)</p>
 
     <p>You can have as much blogs as you like as siblings, beside each other; Homesite :: Blog1, Homesite:: Blog2, etc.. In the database you would give them a different prefix like <code>sb1_</code> and <code>sb2_</code>, ... It all is a matter of making sense or not and which is the easiest approach for your system.</p>
 
