hc::plugins: Minor addition

--- a/hc/en/using-plugins.html
+++ b/hc/en/using-plugins.html
@@ -505,7 +505,7 @@
 
                     <h3 id="docs-modemaintain">503 Maintenance Service (active)</h3>
 
-                    <p>Allows to set your public open blog - the FRONTEND - into a "503 - Service Temporarily Unavailable" mode. Mainly good to use if you drive an upgrade or have to temporary disable access to your blog.</p>
+                    <p>Allows to set your public open blog - the FRONTEND - into a "503 - Service Temporarily Unavailable" mode. Mainly good to use if you drive an upgrade or have to temporary disable public access to your blog.</p>
 
                     <h3 id="docs-plugup">Plugin update notifier</h3>
 
