--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -484,8 +484,8 @@
         <h4 class="plugin_summary">Choose Language</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_multilingual</dt>
-            <dd class="plugin_version">Version 1.17 (GPL, Last Updated 2018-08-20)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung</dd>
+            <dd class="plugin_version">Version 1.18 (GPL, Last Updated 2019-09-15)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
         <p class="plugin_description">Allows visitors to change the frontend interface language</p>
