hc::faq: Fix theme pointer

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -667,7 +667,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
 
     <li id="docs-how-to modify-and-manage-themes">How to modify and manage themes</li>
 
-    <p>Themes, also known as “Styles” or “Templates”, are just one of the ways that you can personalise your new Serendipity blog. Themes are available to install directly from your administration screen, or you could download a zipfile of the theme from the Serendipity repository, or even from the designer’s own blog.</p>
+    <p>Themes, also known as “Styles” or “Templates”, are just one of the ways that you can personalise your new Serendipity blog. Themes are available to install directly from your administration screen, or you could download a tarfile of the theme from the Serendipity Styx repository, or even from the designer’s own blog.</p>
 
     <p>Many users of Serendipity eventually want to modify a theme to suit their needs. All Serendipity themes are written using standard HTML and CSS, but with the addition of the easy to learn and very powerful Smarty templating language.</p>
 
@@ -675,7 +675,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
 
     <p>By default Serendipity ships with several attractive themes for you to try. Simply login to your administration suite and click the “Themes” link in the left menubar. This produces a list of all available and recommended themes with screenshots to make it easy for you. Below the preview image are normally two buttons. The smaller info-button opens additional theme information and the second is used to change/install the new frontend theme you select. If the theme provides an admin theme you get a third button to set this theme as the default backend theme. It now moves to the upper theme-list “Current Theme” section and there you may be presented with a theme config button, which opens the themes configuration, if have.</p>
 
-    <p>If your Serendipity blog isn’t able to use Spartacus, perhaps because your webhost won’t allow it, you can still install new themes for your blog. Either visit the web-based version of the <a href="http://spartacus.s9y.org/index.php?mode=template_all" target="_new">Spartacus themes</a> repository or download a zipfile of the theme directly from the template designer. You’ll need to unzip the theme and upload it (using ftp) to the templates folder of your Serendipity installation. Once you have uploaded your new theme, select the theme from ‘Themes’ page within the administration suite. Don’t forget to deeply check content from unknown sites first!</p>
+    <p>If your Serendipity blog isn’t able to use Spartacus, perhaps because your webhost won’t allow it, you can still install new themes for your blog. Either visit the web-based version of the <a href="https://ophian.github.io/themes/" target="_new">Styx Spartacus themes</a> repository or download a tarfile of the theme directly from the template designer. You’ll need to untar the theme and upload it (using ftp) to the templates folder of your Serendipity installation. Once you have uploaded your new theme, select the theme from ‘Themes’ page within the administration suite. Don’t forget to deeply check content from unknown sites first!</p>
 
     <li id="docs-user-modifications">User Modifications</li>
 
