--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -220,15 +220,15 @@
         <h4 class="plugin_summary">Random Quotes</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_randomquotes</dt>
-            <dd class="plugin_version">Version 1.05.1 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.06 (GPL, Last Updated 2019-10-22)</dd>
             <dd class="plugin_maintainers">Florian Solcher</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Shows a block with a random quotation</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_randomquotes.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_randomquotes">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_randomquotes" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_randomquotes" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_plugin_randomquotes/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -304,9 +304,9 @@
         <h4 class="plugin_summary">Authors login</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_loginform</dt>
-            <dd class="plugin_version">Version 1.09 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2019-10-22)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Neil Dudman</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Show a login form for authors</p>
         <ul class="plugin_actions">
@@ -783,9 +783,9 @@
         <h4 class="plugin_summary">Popular Entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_popularentries</dt>
-            <dd class="plugin_version">Version 1.10.1 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.11 (GPL, Last Updated 2019-10-22)</dd>
             <dd class="plugin_maintainers">Kaustubh Srikanth</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.7</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Shows the titles and number of comments of the most popular entries calculated according to the entries most commented on.</p>
         <ul class="plugin_actions">
