--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1016,15 +1016,15 @@
         <h4 class="plugin_summary">Random Blog Description</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_randomblogdescription</dt>
-            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 0.7 (GPL, Last Updated 2019-10-22)</dd>
             <dd class="plugin_maintainers">Florian Anderiasch</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
-        <p class="plugin_description">Shows a random description in the header. (Seperate database table has currently to be maintained manually)</p>
+        <p class="plugin_description">Shows a random description in the header. (Separate database table has currently to be maintained manually)</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_randomblogdescription.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_randomblogdescription">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_randomblogdescription" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_randomblogdescription" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_randomblogdescription/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -1332,9 +1332,9 @@
         <h4 class="plugin_summary">Hide/delete entries for non-registered users after a specific timespan</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_outdate_entries</dt>
-            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.7 (GPL, Last Updated 2019-10-22)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Hides all entries which are older than a specified age, so that they are only visible for registered users/authors.</p>
         <ul class="plugin_actions">
@@ -1836,15 +1836,15 @@
         <h4 class="plugin_summary">Validates authors login</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_loginform</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.05 (GPL, Last Updated 2019-10-23)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.7</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Validates the login credentials of an author using the sidebar login form</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_loginform.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_loginform">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_loginform" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_loginform" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_loginform/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -2132,15 +2132,15 @@
         <h4 class="plugin_summary">Realtime Comments</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_realtimecomments</dt>
-            <dd class="plugin_version">Version 0.1.3 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 0.2 (GPL, Last Updated 2019-10-23)</dd>
             <dd class="plugin_maintainers">Malte Paskuda</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Load comments made from other users without reloading the page.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_realtimecomments.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_realtimecomments">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_realtimecomments" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_realtimecomments" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_realtimecomments/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
