--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -236,15 +236,15 @@
         <h4 class="plugin_summary">Shoutcast</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_shoutcast</dt>
-            <dd class="plugin_version">Version 1.05 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.06 (GPL, Last Updated 2019-10-22)</dd>
             <dd class="plugin_maintainers">John Mann</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8.4</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Display Shoutcast stream information in the sidebar.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_shoutcast.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_shoutcast">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_shoutcast" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_shoutcast" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_plugin_shoutcast/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
