--- a/hc/en/plugin-api.html
+++ b/hc/en/plugin-api.html
@@ -537,12 +537,11 @@ class serendipity_event_backpage extends serendipity_event
             'smarty'      =&gt; '3.1.0',
             'php'         =&gt; '5.6.0'
         ));
-        $propbag-&gt;add('groups', array('BACKPAGE'));
         $propbag-&gt;add('event_hooks',   array(
             'backend_sidebar_admin_appearance' =&gt; true,
             'backend_sidebar_entries_event_display_backpage' =&gt; true
         ));
-        $propbag->add('groups', array('BACKEND_ADMIN', 'BACKEND_FEATURES'));
+        $propbag-&gt;add('groups', array('BACKEND_ADMIN', 'BACKEND_FEATURES'));
     }
 
     function generate_content(&$title)
@@ -624,14 +623,13 @@ class serendipity_event_backpage extends serendipity_event
             'smarty'      =&gt; '3.1.0',
             'php'         =&gt; '5.6.0'
         ));
-        $propbag-&gt;add('groups', array('BACKPAGE'));
         $propbag-&gt;add('event_hooks',   array(
             'backend_sidebar_admin_appearance' =&gt; true,
             'backend_sidebar_entries_event_display_backpage' =&gt; true,
             'backend_publish' =&gt; true,
             'backend_save' =&gt; true
         ));
-        $propbag->add('groups', array('BACKEND_ADMIN', 'BACKEND_FEATURES'));
+        $propbag-&gt;add('groups', array('BACKEND_ADMIN', 'BACKEND_FEATURES'));
     }
 
     function generate_content(&$title)
@@ -747,7 +745,6 @@ class serendipity_event_backpage extends serendipity_event
             'smarty'      =&gt; '3.1.0',
             'php'         =&gt; '5.6.0'
         ));
-        $propbag-&gt;add('groups', array('BACKPAGE'));
         $propbag-&gt;add('event_hooks',   array(
             'frontend_display' =&gt; true,
             'backend_sidebar_admin_appearance' =&gt; true,
@@ -755,7 +752,7 @@ class serendipity_event_backpage extends serendipity_event
             'backend_publish' =&gt; true,
             'backend_save' =&gt; true
         ));
-        $propbag->add('groups', array('BACKEND_ADMIN', 'BACKEND_FEATURES'));
+        $propbag-&gt;add('groups', array('BACKEND_ADMIN', 'BACKEND_FEATURES'));
     }
 
     function generate_content(&$title)
@@ -865,7 +862,6 @@ class serendipity_event_backpage extends serendipity_event
             'smarty'      =&gt; '3.1.0',
             'php'         =&gt; '5.6.0'
         ));
-        $propbag-&gt;add('groups', array('BACKPAGE'));
         $propbag-&gt;add('event_hooks',   array(
             'frontend_display' =&gt; true,
             'external_plugin' =&gt; true,
@@ -874,8 +870,8 @@ class serendipity_event_backpage extends serendipity_event
             'backend_publish' =&gt; true,
             'backend_save' =&gt; true
         ));
-        $propbag->add('configuration',  array('use_backpagelogo'));
-        $propbag->add('groups', array('BACKEND_ADMIN', 'BACKEND_FEATURES'));
+        $propbag-&gt;add('configuration',  array('use_backpagelogo'));
+        $propbag-&gt;add('groups', array('BACKEND_ADMIN', 'BACKEND_FEATURES'));
     }
 
     function introspect_config_item($name, &$propbag)
