--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -2572,7 +2572,7 @@
         <h4 class="plugin_summary">Markup: Textile</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_textile</dt>
-            <dd class="plugin_version">Version 1.8.5 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.9.0 (GPL, Last Updated 2019-11-08)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Lars Strojny, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2580,7 +2580,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_textile.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_textile">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_textile" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_textile" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_textile/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
