hc::admin-interface: Update for Styx

--- a/hc/en/admin-interface.html
+++ b/hc/en/admin-interface.html
@@ -133,6 +133,15 @@
 
                     <ul>
                       <li><strong>Comments:</strong> Maintain comments posted to entries. See <a href="approving-comments.html">Approve Comments</a>.</li>
+                      <li><strong>Maintenance:</strong> System and hooked maintenance tools.</li>
+                        <ul>
+                          <li><strong>Clear template cache:</strong> Clear current themes Smarty template cache.</li>
+                          <li><strong>Import data:</strong> Import data from another blog/cms system. See <a href="import-export.html">Import/Export Entries</a>.</li>
+                          <li><strong>Export entries:</strong> Export data from Serendipity. See <a href="import-export.html">Import/Export Entries</a>.</li>
+                          <li><strong>Verify Installation Integrity:</strong> Check Serendipity core distribution files for any potential tampering or modifications.</li>
+                          <li><strong>Rebuild Thumbs:</strong> Rebuild thumbnail images of all media items. This can be very useful if you change thumbnail dimensions in the site’s <a href="configuration.html">configuration</a> or if images become accidentally corrupted.</li>
+                          <li><strong>Hooked plugin tools:</strong> Changelog/Log viewer, Theme and Plugin cleanup Managers, Database migrations, etc.</li>
+                        </ul>
                     </ul>
 
                     <h4><strong>Settings</strong></h4>
@@ -143,14 +152,12 @@
                       <li><strong>Plugins:</strong> Manage sidebar and event plugins. See <a href="using-plugins.html">Using Plugins</a>.</li>
                       <li><strong>Users:</strong> Manage individual users. See <a href="user-management.html">User management</a>.</li>
                       <li><strong>Groups:</strong> Manage user groups. Also see <a href="user-management.html">User management</a>.</li>
-                      <li><strong>Maintenance:</strong> Manage user groups.</li>
-                        <ul>
-                          <li><strong>Import data:</strong> Import data from another blog/cms system. See <a href="import-export.html">Import/Export Entries</a>.</li>
-                          <li><strong>Export entries:</strong> Export data from Serendipity. See <a href="import-export.html">Import/Export Entries</a>.</li>
-                          <li><strong>Verify Installation Integrity:</strong> Check Serendipity core distribution files for any potential tampering or modifications.</li>
-                          <li><strong>Rebuild Thumbs:</strong> Rebuild thumbnail images of all media items. This can be very useful if you change thumbnail dimensions in the site’s <a href="configuration.html">configuration</a> or if images become accidentally corrupted.</li>
-                        </ul>
+                      <li><strong>Spam Protector:</strong> Manage SPAM protection. Also see <a href="spam.html">Spam Settings</a>.</li>
                     </ul>
+
+                    <h3>Main Content Area:</h3>
+
+                    <p>Usually the dashbord content or the content of your chosen sidebar links.</p>
 
                 </div>
             </div>
