--- a/hc/en/admin-interface.html
+++ b/hc/en/admin-interface.html
@@ -126,7 +126,7 @@
                     <ul>
                       <li><strong>Add media:</strong> Add media items (images, documents, PDFs, MP3, etc) to the media library.</li>
                       <li><strong>Media library:</strong> Manage items already stored in the media library.</li>
-                      <li><strong>Manage directories:</strong> Media items can be stored in individual directores/folders. This is especially useful when your media library contains many items.</li>
+                      <li><strong>Manage directories:</strong> Media items can be stored in individual directories/folders. This is especially useful when your media library contains many items.</li>
                     </ul>
 
                     <h4><strong>Activity</strong></h4>
