hc::admin-interface: Fix typo in 0711f3b

--- a/hc/en/admin-interface.html
+++ b/hc/en/admin-interface.html
@@ -157,7 +157,7 @@
 
                     <h3>Main Content Area:</h3>
 
-                    <p>Usually the dashbord content or the content of your chosen sidebar links.</p>
+                    <p>Usually the dashboard content or the content of your chosen sidebar links.</p>
 
                 </div>
             </div>
