--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -240,7 +240,7 @@
         <h4 class="plugin_summary">CKEditor Plus</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_ckeditor</dt>
-            <dd class="plugin_version">Version 4.13.0.5 (GPL, Last Updated 2019-11-20)</dd>
+            <dd class="plugin_version">Version 4.13.0.6 (GPL, Last Updated 2019-12-02)</dd>
             <dd class="plugin_maintainers">Rustam Abdullaev, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.6.2</dd>
         </dl>
@@ -2184,8 +2184,8 @@
         <h4 class="plugin_summary">Compress Images</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_tinypng</dt>
-            <dd class="plugin_version">Version 1.03 (GPL, Last Updated 2019-08-18)</dd>
-            <dd class="plugin_maintainers">onli</dd>
+            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2019-12-02)</dd>
+            <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Compress PNG and JPG images with the TinyPNG service.</p>
